--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -569,22 +569,26 @@ div.limited-character.bom {
   
   .material-category{
     padding-left: 24px;
-    width: 330px;
+    width: 400px;
   }
   
+  .material-trade{
+    width: 300px;
+  }
+
   .material-unit-col {
     width: 250px;
   }
-  
-  .material-trade {
-    width: 210px;
+
+  .estimated-rate-column-header, .material-estimatedQty{
+    width: 200px;
   }
   
   .bom-materials-row{
     border-bottom: 0.5px solid #d2d2d2;
   }
 
-  .material-category, .material-trades{
+  .material-category, .material-trade{
     padding-right: 10px;
   }
 
