--- a/src/app/features/first-login/terms-conditions/terms-conditions.component.html
+++ b/src/app/features/first-login/terms-conditions/terms-conditions.component.html
@@ -201,7 +201,7 @@
               Archer Technologies Pvt. Ltd. reserves the right to access all the requests for quotes being raised on the platform and may provide you with pricing for those RFQ’s
               as appropriate.
               <b>
-                Archer Technologies Pvt Ltd. may retain copies of RFQ’s as necessary to comply with its legal and regulatory obligations and its internal compliance rules.
+                Archer Technologies Pvt Ltd. may retain copies of RFP’s as necessary to comply with its legal and regulatory obligations and its internal compliance rules.
               </b>
             </p>
             <p class="terms-conditions__content">
