--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -37,7 +37,7 @@
         </div>
         <div class="col-xs-4 col-md-6 text-right">
           <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white">
-            Create RFQ
+            Create RFP
           </button>
         </div>
       </div>
