--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -5,44 +5,41 @@
         <img src="../../../../assets/images/rfq-details.png" alt="Project Logo" />
         <div>
           <p>
-            You haven't created any RFQ yet. <br />
+            You haven't created any RFP yet. <br />
             Please create one to continue.
           </p>
         </div>
       </div>
 
       <button mat-raised-button [routerLink]="['/rfq/createRfq']" class="main-background-color main-button color-white">
-        Create RFQ
+        Create RFP
       </button>
     </div>
   </div>
 
-  <div class="create-po-dashboard p-b-20 min-height parent"
-    *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp || rfqCount > 0">
-    <div class="row" [ngClass]="isMobile ? 'ml-0' : '' ">
+  <div class="create-po-dashboard p-b-20 min-height parent" *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp || rfqCount > 0">
+    <div class="row" [ngClass]="isMobile ? 'ml-0' : ''">
       <div class="col-xs-6">
-        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100' : ' w-vw-14' ">
-          <input matInput placeholder="Search RFQ" type="search" (keyup)="applyFilter($event.target.value)" />
+        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100' : ' w-vw-14'">
+          <input matInput placeholder="Search RFP" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-6 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex' : '' ">
+      <div class="text-right col-xs-6 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex' : ''">
         <ng-container *ngIf="isMobile">
           <button mat-button class="fltr-btn brand-color">
             <mat-icon inline="true">filter_list</mat-icon>
           </button>
         </ng-container>
-        <button mat-raised-button class="main-background-color main-button color-white demo-title"
-          (click)="createRfq()">
-          Create RFQ
+        <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="createRfq()">
+          Create RFP
         </button>
       </div>
     </div>
 
     <div class="row">
-
       <ng-container *ngIf="!isMobile">
         <div class="col-md-2">
           <advance-search filterType="rfq"></advance-search>
@@ -50,7 +47,7 @@
       </ng-container>
 
       <div class="col-md-10">
-        <ng-container *ngIf="(submittedRfqListTemp || nonSubmittedRfqListTemp) else emptyReports">
+        <ng-container *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp; else emptyReports">
           <div class="rfq-list-detail-custom">
             <mat-accordion *ngIf="submittedRfqListTemp" class="m-b-10">
               <mat-expansion-panel class="myPanel" [expanded]="true">
@@ -63,7 +60,7 @@
                 <div class="add-unique-container mat-elevation-z8">
                   <table mat-table [dataSource]="submittedRfqList">
                     <ng-container matColumnDef="RFQ Name">
-                      <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
+                      <th mat-header-cell *matHeaderCellDef>RFP Name</th>
                       <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
                     </ng-container>
 
@@ -110,7 +107,8 @@
                                 <div class="col-sm-12">
                                   <span class="supplier-name-tag">Supplier Name</span>
                                   <ng-container *ngFor="let name of element.supplierList">
-                                    <span><br />
+                                    <span
+                                      ><br />
                                       {{ name.supplierName }}
                                     </span>
                                   </ng-container>
@@ -124,15 +122,13 @@
                     <ng-container matColumnDef="action1">
                       <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                       <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
-                        <a [routerLink]="['./rfq-view', element.rfqId]" style="color: #f47721;">View RFQ</a>
+                        <a [routerLink]="['./rfq-view', element.rfqId]" style="color: #f47721;">View RFP</a>
                       </td>
                     </ng-container>
                     <ng-container matColumnDef="action2">
                       <th mat-header-cell *matHeaderCellDef></th>
                       <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center">
-                        <a [routerLink]="['./rfq-bid/', element.rfqId]" class="text-align-center"
-                          style="color: #f47721;">View
-                          Bids</a>
+                        <a [routerLink]="['./rfq-bid/', element.rfqId]" class="text-align-center" style="color: #f47721;">View Bids</a>
                       </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -153,7 +149,7 @@
                 <div class="add-unique-container mat-elevation-z8">
                   <table mat-table [dataSource]="nonSubmittedRfqList">
                     <ng-container matColumnDef="RFQ Name">
-                      <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
+                      <th mat-header-cell *matHeaderCellDef>RFP Name</th>
                       <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
                     </ng-container>
 
@@ -201,7 +197,8 @@
                                 <div class="col-sm-12">
                                   <span class="supplier-name-tag">Supplier Name</span>
                                   <ng-container *ngFor="let name of element.supplierList">
-                                    <span><br />
+                                    <span
+                                      ><br />
                                       {{ name.supplierName }}
                                     </span>
                                   </ng-container>
@@ -215,14 +212,12 @@
                     <ng-container matColumnDef="action1">
                       <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                       <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
-                        <a (click)="viewRfq(element)" class="cursor"
-                          style="color: #f47721;">{{ element.rfqStatus === 0 ? "Complete RFQ" : "View RFQ" }}</a>
+                        <a (click)="viewRfq(element)" class="cursor" style="color: #f47721;">{{ element.rfqStatus === 0 ? "Complete RFP" : "View RFP" }}</a>
                       </td>
                     </ng-container>
                     <ng-container matColumnDef="action2">
                       <th mat-header-cell *matHeaderCellDef></th>
-                      <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center">
-                      </td>
+                      <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center"></td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
@@ -234,16 +229,12 @@
         </ng-container>
         <ng-template #emptyReports>
           <div class="d-block text-align-center mt-3">
-            <img src="../../../../assets/images/empty-report.svg" alt="empty report">
-            <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.
-            </p>
+            <img src="../../../../assets/images/empty-report.svg" alt="empty report" />
+            <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
             <p class="font-weight-light m-0 mt-1">Try Again !</p>
           </div>
         </ng-template>
       </div>
-
     </div>
-
-
   </div>
 </div>
