--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -8,12 +8,12 @@
         <div class="row p-t-20">
           <div class="col-xs-6 col-md-4" [ngClass]="isMobile ? 'font-size14' : ''">
             <div class="p-t-10">
-              <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFQ Name: </label>
+              <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP Name: </label>
               {{ rfqDetails.rfqName }}
             </div>
           </div>
           <div class="col-xs-6 col-md-4 p-t-10 text-left" [ngClass]="isMobile ? 'font-size14' : ''">
-            <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFQ End Date: </label>
+            <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP End Date: </label>
             {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
           </div>
           <div
@@ -73,7 +73,6 @@
               <div class="col-md-12">
                 <label for="phoneNumber" class="word-break-all"> {{ supplier.countryCallingCode }}-{{ supplier.contact_no }} </label>
               </div>
-              
             </mat-card>
           </div>
         </div>
@@ -152,14 +151,13 @@
                 <td class="text-align-center" mat-cell *matCellDef="let element">
                   <div *ngIf="element?.documentList?.length" class="images-lists" (click)="viewAllImages(element.materialId)">
                     <ng-container *ngFor="let img of element.documentList; let i = index">
-                      <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                      <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
                     </ng-container>
                   </div>
-      
+
                   <ng-container *ngIf="!element?.documentList">
                     <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
                   </ng-container>
-                  
                 </td>
               </ng-container>
 
