--- a/src/assets/scss/pages/report.scss
+++ b/src/assets/scss/pages/report.scss
@@ -248,6 +248,10 @@
   margin-left: 40px;
 }
 
+.select-all-checkbox {
+  background-color: #eae8e8;
+}
+
 @media only screen and (max-width: 410px){
   .report {
     .show-amount{
