--- a/src/assets/scss/pages/advance-search.scss
+++ b/src/assets/scss/pages/advance-search.scss
@@ -74,3 +74,23 @@
         }
     }
 }
+
+@media(max-width: 599px){
+    .search-block {
+        .s-head{
+            padding: 15px 20px;
+        }
+        
+        .mat-expansion-panel-header {
+            padding: 0 20px;
+        }
+
+        .mat-expansion-panel-body{
+            padding: 0 18px 0px;
+        }
+
+        .actions{
+            padding: 20px !important;
+        }
+    }
+}
